--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,27 @@
   </build>
 
   <dependencies>
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>4.11</version>
+          <exclusions>
+              <exclusion>
+                  <groupId>org.hamcrest</groupId>
+                  <artifactId>hamcrest-core</artifactId>
+              </exclusion>
+          </exclusions>
+          <scope>test</scope>
+      </dependency>
+      <!-- must be included before hadoop-client which contains mockito-1.8 with
+           older hamcrest embedded -->
+      <dependency>
+          <groupId>org.hamcrest</groupId>
+          <artifactId>hamcrest-all</artifactId>
+          <version>1.3</version>
+          <scope>test</scope>
+      </dependency>
+
       <!--
       we make the hadoop-client dependency optional, so that
       users would be able to use their favorite hadoop-client version
@@ -65,6 +86,10 @@
                   <groupId>com.sun.jersey</groupId>
                   <artifactId>jersey-server</artifactId>
               </exclusion>
+              <exclusion>
+                  <groupId>org.mockito</groupId>
+                  <artifactId>mockito-all</artifactId>
+              </exclusion>
           </exclusions>
           <optional>true</optional>
       </dependency>
@@ -75,18 +100,6 @@
           <classifier>hadoop2</classifier>
           <!-- version 1.0.0 have incompatabilites with current CDH -->
           <version>0.9.0-incubating</version>
-          <scope>test</scope>
-      </dependency>
-      <dependency>
-          <groupId>junit</groupId>
-          <artifactId>junit</artifactId>
-          <version>4.11</version>
-          <scope>test</scope>
-      </dependency>
-      <dependency>
-          <groupId>org.hamcrest</groupId>
-          <artifactId>hamcrest-all</artifactId>
-          <version>1.3</version>
           <scope>test</scope>
       </dependency>
       <dependency>
